# mingw-mlpack-issue-20220708

./: CMakeLists.txt  README.md  main.cpp
